<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/groceries"
        android:icon="@drawable/ic_tr_groceries"/>
    <item
        android:title="@string/cafe_restaurant"
        android:icon="@drawable/ic_tr_cafe_or_restaurant"/>
    <item
        android:title="@string/entertainment"
        android:icon="@drawable/ic_tr_entertainment"/>
    <item
        android:title="@string/bill"
        android:icon="@drawable/ic_tr_bill"/>
    <item
        android:title="@string/transportation"
        android:icon="@drawable/ic_tr_transportation"/>
    <item
        android:title="@string/insurance"
        android:icon="@drawable/ic_tr_insurance"/>
    <item
        android:title="@string/healthcare"
        android:icon="@drawable/ic_tr_healthcare"/>
    <item
        android:title="@string/education"
        android:icon="@drawable/ic_tr_groceries"/>
    <item
        android:title="@string/clothing"
        android:icon="@drawable/ic_tr_clothing"/>
    <item
        android:title="@string/investment"
        android:icon="@drawable/ic_tr_investment"/>
    <item
        android:title="@string/debt"
        android:icon="@drawable/ic_tr_debt"/>
    <item
        android:title="@string/tax"
        android:icon="@drawable/ic_tr_tax"/>
    <item
        android:title="@string/housing"
        android:icon="@drawable/ic_tr_housing"/>
    <item
        android:title="@string/other"
        android:icon="@drawable/ic_tr_other"/>
</menu>