<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionModifyActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/lavender"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title=" "
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:elevation="5dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/add_new_transaction"
        android:textColor="@color/text_fill_on_lavender"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/change"
                android:textSize="25sp"
                android:id="@+id/change_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_a_number"
                android:id="@+id/alert_change"
                android:textSize="16sp"
                android:textColor="@color/error"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/change_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/alert_change"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/input_change"
                android:textColor="@color/spent_text"
                android:hint="@string/_15_digits_max"
                android:gravity="center"
                android:maxLength="15"
                android:importantForAutofill="no"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/input_change"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_gain"
                    android:buttonTint="@color/error"
                    android:text="@string/income"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_lost"
                    android:buttonTint="@color/error"
                    android:checked="true"
                    android:text="@string/spent"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/radioGroup"
                android:text="@string/date"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:id="@+id/date_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_a_date"
                android:id="@+id/alert_date"
                android:textSize="16sp"
                android:textColor="@color/error"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/date_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/text_date_shower"
                app:layout_constraintTop_toBottomOf="@id/alert_date"
                android:text="16th September 2024"
                android:visibility="gone"
                tools:ignore="HardcodedText" />
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_a_date"
                android:id="@+id/pick_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/lavender"
                android:textColor="@color/text_fill_on_lavender"
                app:layout_constraintTop_toBottomOf="@id/text_date_shower"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pick_date"
                android:text="@string/time"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:id="@+id/time_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_time"
                android:id="@+id/alert_time"
                android:textSize="16sp"
                android:textColor="@color/error"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/time_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/text_time_shower"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/alert_time"
                android:text="16:35"
                tools:ignore="HardcodedText" />
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_time"
                android:id="@+id/pick_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/lavender"
                android:textColor="@color/text_fill_on_lavender"
                app:layout_constraintTop_toBottomOf="@id/text_time_shower"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pick_time"
                android:text="@string/category"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:id="@+id/category_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_category"
                android:id="@+id/alert_category"
                android:textSize="16sp"
                android:textColor="@color/error"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/category_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/horizontal"
                app:layout_constraintTop_toBottomOf="@id/alert_category">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_a_category"
                    android:id="@+id/pick_category"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/category_icon"
                    android:backgroundTint="@color/lavender"
                    android:textColor="@color/text_fill_on_lavender"
                    app:layout_constraintTop_toTopOf="parent"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/category_icon"
                    android:importantForAccessibility="no"
                    android:layout_marginStart="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/pick_category"
                    android:src="@drawable/ic_question_mark"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/note_text_view"
                android:text="@string/notes"
                android:textSize="25sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:id="@+id/input_note"
                android:importantForAutofill="no"
                app:layout_constraintTop_toBottomOf="@id/note_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/_250_characters_max"
                android:maxLength="250"
                android:inputType="textAutoCorrect|textCapSentences|textMultiLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning_custom_remain"
                android:id="@+id/alert_custom_remain"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingHorizontal="30dp"
                app:layout_constraintTop_toBottomOf="@id/input_note"
                android:textColor="@color/error" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_remain"
                android:id="@+id/remain_checkbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alert_custom_remain"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/remain_panel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/disabled_background"
                app:layout_constraintTop_toBottomOf="@id/remain_checkbox">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remain"
                    android:textSize="25sp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/remain_text_view" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insert_a_number"
                    android:id="@+id/alert_remain"
                    android:textSize="16sp"
                    android:visibility="gone"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/remain_text_view"
                    android:textColor="@color/error" />
                <EditText
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:inputType="number"
                    android:id="@+id/input_remain"
                    android:hint="@string/maximum_remain_digits"
                    android:gravity="center"
                    android:maxLength="18"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/alert_remain"
                    android:importantForAutofill="no"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/remain_panel"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="invisible"
                android:id="@+id/scroll_view_fixer"
                app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:id="@+id/confirm"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/lavender"
                android:textColor="@color/text_fill_on_lavender"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/scroll_view_fixer"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                app:layout_constraintStart_toStartOf="parent"
                android:backgroundTint="@color/lavender"
                android:textColor="@color/text_fill_on_lavender"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/scroll_view_fixer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>