<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".card_details">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/lavender"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title=" "
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:elevation="5dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/add_bank"
        android:textColor="@color/text_fill_on_lavender"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addCard_confirm"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:backgroundTint="@color/lavender"
        android:textColor="@color/text_fill_on_lavender"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addCard_cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:backgroundTint="@color/lavender"
        android:textColor="@color/text_fill_on_lavender"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>